# modomaly

./: README.md  pyproject.toml
src/modomaly/: __init__.py  __main__.py  modomaly.py
src/modomaly/data/: lidar_0.csv  lidar_1.csv  lidar_10.csv  lidar_11.csv  lidar_12.csv  lidar_13.csv  lidar_14.csv  lidar_15.csv  lidar_16.csv  lidar_17.csv  lidar_18.csv  lidar_19.csv  lidar_2.csv  lidar_20.csv  lidar_21.csv  lidar_22.csv  lidar_23.csv  lidar_24.csv  lidar_25.csv  lidar_26.csv  lidar_27.csv  lidar_28.csv  lidar_29.csv  lidar_3.csv  lidar_30.csv  lidar_31.csv  lidar_32.csv  lidar_33.csv  lidar_34.csv  lidar_35.csv  lidar_36.csv  lidar_37.csv  lidar_38.csv  lidar_39.csv  lidar_4.csv  lidar_40.csv  lidar_41.csv  lidar_42.csv  lidar_43.csv  lidar_44.csv  (+24 more)
