[project]
name = "modomaly"
version = "0.1.0"
description = "Anomaly detection as modularity-based community detection"
readme = "README.md"
authors = [
    { name = "Jakub Sliacan", email = "jsliacan@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
