[project]
name = "modomaly"
version = "0.1.0"
description = "Anomaly detection as modularity-based community detection"
readme = "README.md"
authors = [
    { name = "Jakub Sliacan", email = "jsliacan@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pyqt6>=6.8.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
